cor "darkblue" inserida nos botões

--- a/app/src/main/res/layout/item_professional.xml
+++ b/app/src/main/res/layout/item_professional.xml
@@ -33,8 +33,9 @@
         android:id="@+id/bookButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="8dp"
+
+        android:backgroundTint="@color/darkblue"
         android:text="@string/bookButton" />
 
 </LinearLayout>
