--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#457b9d</color>
-    <color name="red">#1d3557</color>
+    <color name="lightblue">#457b9d</color>
+    <color name="darkblue">#1d3557</color>
 </resources>
