--- a/app/src/main/res/layout/activity_agendamento.xml
+++ b/app/src/main/res/layout/activity_agendamento.xml
@@ -31,4 +31,39 @@
         app:layout_constraintVertical_bias="0.5"
         tools:ignore="ContentDescription" />
 
+    <!-- DatePicker -->
+
+    <!-- TimePicker -->
+
+    <!-- Botão Confirmar -->
+
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="30dp"
+        android:datePickerMode="spinner"
+        app:layout_constraintTop_toBottomOf="@+id/headerBackground"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TimePicker
+        android:id="@+id/timePicker"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:timePickerMode="spinner"
+        app:layout_constraintBottom_toBottomOf="@+id/btnConfirmar"
+        app:layout_constraintTop_toBottomOf="@+id/datePicker"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/btnConfirmar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Confirmar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timePicker" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
