--- a/app/src/main/res/layout/activity_consultas.xml
+++ b/app/src/main/res/layout/activity_consultas.xml
@@ -31,13 +31,17 @@
         app:layout_constraintVertical_bias="0.5"
         tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="teste"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerConsultas"
+        android:layout_width="match_parent"
+        android:layout_height="659dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerBackground" />
+        app:layout_constraintTop_toBottomOf="@+id/headerBackground"
+        tools:listitem="@layout/item_consultas"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
