Adicionada opção de remover consulta

--- a/app/src/main/res/layout/activity_consultas.xml
+++ b/app/src/main/res/layout/activity_consultas.xml
@@ -41,7 +41,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerBackground"
-        tools:listitem="@layout/item_consultas"/>
+        tools:listitem="@layout/item_consultas">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
