icon redirecionando para Consultas

--- a/app/src/main/res/layout/activity_agendamento.xml
+++ b/app/src/main/res/layout/activity_agendamento.xml
@@ -63,6 +63,7 @@
             android:id="@+id/dataTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/lightblue"
             android:layout_margin="10dp"
             android:gravity="center"
             android:text="@string/dataTitle"
