--- a/app/src/main/res/layout/item_consultas.xml
+++ b/app/src/main/res/layout/item_consultas.xml
@@ -41,10 +41,13 @@
 
         <Button
             android:id="@+id/deleteButton"
-            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/darkblue"
+            android:drawableEnd="@drawable/free_cancellation"
             android:insetTop="12dp"
-            android:text="@string/deleteButton" />
+            android:text="@string/deleteButton"/>
 
     </LinearLayout>
 
